waiting for new feature

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,35 +2,73 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c0aba0af",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import datetime"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "d6b256ed",
    "metadata": {},
    "outputs": [],
    "source": [
-    "today = datetime.datetime.now() - datetime.timedelta(days=1)\n",
-    "date_format = \"%d-%b-%Y\"\n",
-    "today_str = today.strftime(date_format)"
+    "from src.shopline import ShopLine\n",
+    "import json\n",
+    "\n",
+    "shopline = ShopLine()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "dc6f1309",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m2025-07-23 17:06:19.570\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36msrc.shopline\u001b[0m:\u001b[36mget_outstanding_orders\u001b[0m:\u001b[36m158\u001b[0m - \u001b[1mSearch Params: {'per_page': 200, 'delivery_option_id': '68281a2f3451b7000c4f5d7b', 'status': 'confirmed', 'delivery_statuses[]': ['pending', 'shipping', 'shipped', 'returning']}\u001b[0m\n",
+      "\u001b[32m2025-07-23 17:06:19.571\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36msrc.shopline\u001b[0m:\u001b[36msearch_order\u001b[0m:\u001b[36m134\u001b[0m - \u001b[1mFull Search URL: https://open.shopline.io/v1/orders/search?per_page=200&delivery_option_id=68281a2f3451b7000c4f5d7b&status=confirmed&delivery_statuses[]=pending&delivery_statuses[]=shipping&delivery_statuses[]=shipped&delivery_statuses[]=returning\u001b[0m\n",
+      "\u001b[32m2025-07-23 17:06:27.086\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36msrc.shopline\u001b[0m:\u001b[36mresponse_handler\u001b[0m:\u001b[36m49\u001b[0m - \u001b[34m\u001b[1mRequest Succeed\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "orders = shopline.get_outstanding_orders()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "08e63237",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2025-07-23T08:45:06.342+00:00\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(orders[\"items\"][0][\"confirmed_at\"])"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.4"
   }
  },
