--- a/test.ipynb
+++ b/test.ipynb
@@ -5,12 +5,23 @@
    "execution_count": 1,
    "id": "d6b256ed",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m2025-09-30 20:54:25.088\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36msrc.shopline\u001b[0m:\u001b[36msearch_order\u001b[0m:\u001b[36m135\u001b[0m - \u001b[1mFull Search URL: https://open.shopline.io/v1/orders/search?query=20250930123248742\u001b[0m\n",
+      "\u001b[32m2025-09-30 20:54:25.772\u001b[0m | \u001b[31m\u001b[1mERROR   \u001b[0m | \u001b[36msrc.shopline\u001b[0m:\u001b[36mresponse_handler\u001b[0m:\u001b[36m55\u001b[0m - \u001b[31m\u001b[1mResponse: {\"error\":\"Your IP Address is not whitelisted\",\"code\":\"InvalidAccessTokenError\",\"caused_by\":null}\u001b[0m\n",
+      "\u001b[32m2025-09-30 20:54:25.773\u001b[0m | \u001b[31m\u001b[1mERROR   \u001b[0m | \u001b[36msrc.shopline\u001b[0m:\u001b[36mresponse_handler\u001b[0m:\u001b[36m56\u001b[0m - \u001b[31m\u001b[1mToken 錯誤 - 當前 IP: 150.116.142.177\u001b[0m\n",
+      "\u001b[32m2025-09-30 20:54:25.774\u001b[0m | \u001b[31m\u001b[1mERROR   \u001b[0m | \u001b[36msrc.shopline\u001b[0m:\u001b[36msetup\u001b[0m:\u001b[36m34\u001b[0m - \u001b[31m\u001b[1mOrder 20250930123248742 不存在\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "from src.shopline import ShopLine\n",
     "import json\n",
     "\n",
-    "shopline = ShopLine()\n"
+    "shopline = ShopLine(\"20250930123248742\")\n"
    ]
   },
   {
@@ -55,7 +66,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -69,7 +80,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.9.9"
   }
  },
  "nbformat": 4,
